# p6m-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: create-release.yaml  release.yaml  smoke-test.yaml
ci/templates/inno/: default.iss  p6m.iss
ci/templates/winget/: installer.yaml  locale.en-US.yaml  version.yaml
resources/: Tiltfile  aws_config  npmrc  settings.xml
resources/cargo/: credentials.toml.j2
resources/poetry/: auth.toml.j2  config.toml.j2
src/: cli.rs  completions.rs  context.rs  logging.rs  login.rs  main.rs  open.rs  purge.rs  repositories.rs  tilt.rs  version.rs  whoami.rs
src/auth/: interactive.rs  mod.rs  openid.rs  serde.rs  token_repository.rs
src/auth0/: api.rs  mod.rs  types.rs
src/check/: check_archetect.rs  check_artifact_management.rs  check_docker.rs  check_dotnet.rs  check_java.rs  check_javascript.rs  check_kubernetes.rs  check_python.rs  check_scm.rs  common.rs  mod.rs
src/jwt/: mod.rs
src/models/: artifact.rs  aws.rs  azure.rs  git.rs  mod.rs  openid.rs
src/sso/: auth0.rs  aws.rs  azure.rs  mod.rs  vcluster.rs
src/workstation/: mod.rs
src/workstation/check/: check_archetect.rs  check_artifact_management.rs  check_docker.rs  check_dotnet.rs  check_java.rs  check_javascript.rs  check_kubernetes.rs  check_python.rs  check_scm.rs  check_self.rs  common.rs  mod.rs
src/workstation/setup/: mod.rs
