[package]
authors = [
    "Jimmie Fulton <jimmie@ybor.ai>"
]
description = "p6m Cli"
edition = "2018"
homepage = "https://github.com/p6m-run/p6m-cli"
name = "p6m"
publish = ["p6m"]
readme = "README.md"
repository = "https://github.com/p6m-run/p6m-cli"
version = "0.4.1"

[workspace]
members = ["."]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21.2"
camino = "1.1.7"
clap = { version = "4.1.2", features = ["cargo", "derive", "string"] }
clap_derive = { version = "4.1.0" }
clap_complete = "4.1.2"
dirs = "5.0.1"
execute = "0.2"
glob = "0.3.0"
globset = "0.4"
inquire = "0.6.2"
itertools = "*"
log = "0.4"
loggerv = "0.7"
minijinja = "1.0.3"
octocrab = "0.25.1"
once_cell = "1.17.1"
serde = "*"
serde_json = "1.0.85"
shellexpand = "3.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
webbrowser = "0.8"
urlencoding = "2.1.0"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
aws-sdk-sso = "0.33.0"
aws-config = "0.56.1"
sha1 = "0.10.6"
hex = "0.4.3"
futures-util = "0.3.28"
aws-sdk-eks = "0.33.0"
chrono = "0.4.31"
azure_core = "0.19.0"
azure_identity = "0.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
time = "0.3.36"
